@@ -1,5 +1,9 @@
 EXTRA_DIST = bbdb.ec
 
+bbsdir = ${datadir}/@PACKAGE@/bb
+
+dist_bbs_SCRIPTS = create_target.py
+
 noinst_HEADERS = bb.h bbdb.h bbapi.h observatory.h
 
 if PGSQL
