@@ -20,6 +20,8 @@
 #include "bbdb.h"
 #include "rts2db/sqlerror.h"
 
+#include <math.h>
+
 using namespace rts2bb;
 
 /***
@@ -46,6 +48,79 @@ void rts2bb::createMapping (int observatory_id, int tar_id, int obs_tar_id)
 	{
 		EXEC SQL ROLLBACK;
 		throw rts2db::SqlError ();
+	}
+	EXEC SQL COMMIT;
+}
+
+void rts2bb::reportObservation (int observatory_id, int obs_id, int tar_id, double obs_ra, double obs_dec, double obs_slew, double obs_start, double obs_end, double onsky, int good_images, int bad_images)
+{
+	EXEC SQL BEGIN DECLARE SECTION;
+	int db_observatory_id = observatory_id;
+	int db_obs_id = obs_id;
+	int db_tar_id = tar_id;
+	double db_obs_ra = obs_ra;
+	double db_obs_dec = obs_dec;
+	double db_obs_slew = obs_slew;
+	double db_obs_start = obs_start;
+	double db_obs_end = obs_end;
+	double db_onsky = onsky;
+	int db_good_images = good_images;
+	int db_bad_images = bad_images;
+
+	int db_obs_slew_ind = 0;
+	int db_obs_start_ind = 0;
+	int db_obs_end_ind = 0;
+	EXEC SQL END DECLARE SECTION;
+
+	if (isnan (obs_slew))
+	{
+		db_obs_slew = NAN;
+		db_obs_slew_ind = -1;
+	}
+
+	if (isnan (obs_start))
+	{
+		db_obs_start = NAN;
+		db_obs_start_ind = -1;
+	}
+
+	if (isnan (obs_end))
+	{
+		db_obs_end = NAN;
+		db_obs_end_ind = -1;
+	}
+
+	EXEC SQL UPDATE observatory_observations SET
+		tar_id = :db_tar_id,
+		obs_ra = :db_obs_ra,
+		obs_dec = :db_obs_dec,
+		obs_slew = to_timestamp (:db_obs_slew :db_obs_slew_ind),
+		obs_start = to_timestamp (:db_obs_start :db_obs_start_ind),
+		obs_end = to_timestamp (:db_obs_end :db_obs_end_ind),
+		onsky = :db_onsky,
+		good_images = :db_good_images,
+		bad_images = :db_bad_images
+	WHERE
+		observatory_id = :db_observatory_id AND obs_id = :db_obs_id;
+	
+	if (sqlca.sqlcode)
+	{
+		EXEC SQL ROLLBACK;
+
+		EXEC SQL INSERT INTO observatory_observations
+			(observatory_id, obs_id, tar_id, obs_ra, obs_dec, obs_slew, obs_start, obs_end, onsky, good_images, bad_images)
+		VALUES
+			(:db_observatory_id, :db_obs_id, :db_tar_id, :db_obs_ra, :db_obs_dec,
+			to_timestamp (:db_obs_slew :db_obs_slew_ind),
+			to_timestamp (:db_obs_start :db_obs_start_ind),
+			to_timestamp (:db_obs_end :db_obs_end_ind),
+			:db_onsky, :db_good_images, :db_bad_images);
+
+		if (sqlca.sqlcode)
+		{
+			EXEC SQL ROLLBACK;
+			throw rts2db::SqlError ();
+		}
 	}
 	EXEC SQL COMMIT;
 }
