@@ -29,4 +29,6 @@ namespace rts2bb
  */
 void createMapping (int observatory_id, int tar_id, int obs_tar_id);
 
+void reportObservation (int observatory_id, int obs_id, int tar_id, double obs_ra, double obs_dec, double obs_slew, double obs_start, double obs_end, double onsky, int good_images, int bad_images);
+
 }
